# haskell-playground

./: .gitignore  README.md  haskell-playground.cabal  package.yaml  stack.yaml
src/: ConduitEx.hs  EitherIO.hs  ErrorHandling.hs  Json.hs  Lenses.hs  TempFile.hs  TypeFamilies.hs  TypeFamiliesWiki.hs  typeFamilies.md
src/Agda/: readme.md
src/Binary data/: readme.md
src/BlockChain/: readme.md
src/BookOfTypes/: TypeFamilies.lhs  readme.md
src/Channels/: AsyncEx.hs  Ex.hs  Worker.hs
src/Cool-Packages/: readme.md
src/DataClass/: Notes.lhs
src/DataKinds/: BuiltInTypes.lhs  Intro.lhs  Notes.lhs
src/DependentHaskell/: Vectors.hs
src/Deriving/: Notes.lhs  readme.md
src/Design/: readme.md
src/Effects/: componentM.md  registry.md
src/EqualityConstraint/: Notes.lhs
src/Exceptions/: Checked.hs  Notes.lhs  readme.md
src/Exercises/: TypeLevelProgramming.lhs
src/Existential/: Notes.lhs
src/ExtensibleData/: Ex.hs  readme.md
src/FnDependencies/: Notes.lhs
src/FreeMonads/: Notes.hs  Notes2.hs
src/GADTs/: HList.hs  LengthIndexedList.hs  Notes.lhs  readme.md
src/GHC-Extensions/: readme.md
src/Generic/: GDeepsq.hs  JsonSchema.hs  Notes.hs  Sops.hs  readme.md
src/GreenThreads/: Notes.hs
src/HighKindedData/: Higgledy.hs  Notes.hs  Notes.lhs
src/Idris/: Readme.md
src/ImplicitParams/: AnonRecords1.hs  AnonRecords2.hs  Class.hs  Notes.hs
src/Interests/: Readme.md
src/ML/: readme.md
src/Misc/: Deriving.lhs
src/Misc-knwoledge/: readme.md
src/Overlap/: Example.hs  Notes.hs  Notes.lhs  TypeFamilies.hs
src/OverloadedLabels/: Notes.hs  (+1 more)
(+84 files in other folders)
