name:                haskell-playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/epicallan/haskell-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Lukwago Allan
maintainer:          epicallan.al@gmail.com
copyright:           2017 Lukwago Allan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Json
                    ,  TypeFamilies
  build-depends:       base >= 4.7 && < 5
                    ,  text
                    ,  bytestring >=0.10.8.1
                    ,  aeson

  default-language:    Haskell2010


test-suite haskell-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-playground
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/epicallan/haskell-playground
